	are used with polarPlot and type is default
*	Fix colour scale problem for windRose when interval does not
	exist
*	Added 'nativeRaster' class handler for GoogleMapsPlots
*	(test) Fix for GoogleMapsPlot xlim, ylim
*	Do not remove missing data from timeVariation
*	Fix bug in FAC2 in modStats when observations = 0 (exclude
	from calculation because indeterminate)

Changes in openair 0.6-0 [2012-04-10]
=====================================
*	Add y.relation option to timePlot
*	Fix interpolation bug in calcFno2 and names in documentation.
*	Refine conditionalQuantile scales
*	Provide volatile and non-volatile components for FDMS PM10 and
	PM2.5 in importKCL - now consistent with importAURN
*	NEW FUNCTION conditionalEval for model evaluation - allows
	other variable performance to be assessed.
*	Make lattice strips white by default for cleaner look on
	complicated plots
*	Complete re-write of import to simplify - changes are NOT
	backward compatible but will allow more developments
*	Allow line breaks in titles using \n to work woth quickText
	- thanks to Karl
*	Allow better annotation of calendarPlot - highlight values
	above/below a certain threshold.


Changes in openair 0.5-25 [2012-03-16]
=====================================
*	Fix bug when type = "wd" - would add missing data to north
	sector
*	Add observed histogram to conditionalQuantile
*	Fix bug in timeAverage when ws was not available but wd was
*	Temporaryfix to GoogleMapsPlot documentation due to new
	package version

Changes in openair 0.5-23 [2012-02-28]
=====================================
*	Fix bug in windRose when paddle = FALSE

Changes in openair 0.5-22 [2012-01-12]
=====================================
*	Fix scaling bug that could sometime affect polarPlot grid
	lines
*	Fix regression in importKCL that was intruduced in 0.5-21
*	Make sure wd data are rounded to 10 degrees in polarFreq
*	Fix date padding issue in smoothTrend when type = "site"